[gd_scene load_steps=14 format=3 uid="uid://bsu8y3ppojd41"]

[ext_resource type="Script" path="res://scripts/mushroom_projectile.gd" id="1_5bke6"]
[ext_resource type="Texture2D" uid="uid://bx7c7jj3d3mkw" path="res://sprites/New Art/Monster_Creatures_Fantasy/Mushroom/Projectile_sprite.png" id="2_71nos"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cquc6"]
atlas = ExtResource("2_71nos")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdt3j"]
atlas = ExtResource("2_71nos")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_071ke"]
atlas = ExtResource("2_71nos")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j73t"]
atlas = ExtResource("2_71nos")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_srjgq"]
atlas = ExtResource("2_71nos")
region = Rect2(200, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_c47vo"]
atlas = ExtResource("2_71nos")
region = Rect2(250, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv1wp"]
atlas = ExtResource("2_71nos")
region = Rect2(300, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbjw4"]
atlas = ExtResource("2_71nos")
region = Rect2(350, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_clblw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cquc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdt3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_071ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j73t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srjgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c47vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv1wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbjw4")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="GDScript" id="GDScript_5tu3j"]
script/source = "extends Area2D

var damage = global.mushroom_projectile_damage
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6o1bq"]
size = Vector2(6, 6)

[node name="mushroom_projectile" type="Node2D"]
position = Vector2(62, 43)
scale = Vector2(0.5, 0.5)
script = ExtResource("1_5bke6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_clblw")
frame_progress = 0.960691

[node name="AttackHitboxArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2
monitoring = false
script = SubResource("GDScript_5tu3j")

[node name="AttackCollision" type="CollisionShape2D" parent="AttackHitboxArea"]
shape = SubResource("RectangleShape2D_6o1bq")

[node name="ImpactDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="AttackCollisionSide" type="CollisionShape2D" parent="ImpactDetector"]
shape = SubResource("RectangleShape2D_6o1bq")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="area_entered" from="ImpactDetector" to="." method="_on_impact_detector_area_entered"]
[connection signal="body_entered" from="ImpactDetector" to="." method="_on_impact_detector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
